--- a/Frequentist Inference Case Study - Part B - Emanuele Ebrahimi.ipynb
+++ b/Frequentist Inference Case Study - Part B - Emanuele Ebrahimi.ipynb
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -638,7 +638,7 @@
        "9   60    0  25.840         0       0       1  28923.13692               0"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -689,25 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#calculate pooled standard deviation\n",
-    "medical_copy = medical.copy()\n",
-    "charges_with_ins = medical_copy[medical_copy['insuranceclaim'] == True]\n",
-    "charges_without_ins = medical_copy[medical_copy['insuranceclaim'] == False]\n",
-    "\n",
-    "\n",
-    "print(pooled_std)\n",
-    "\n",
-    "#define t-statistics\n",
-    "t_score = \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -797,61 +779,6 @@
        "      <td>3866.85520</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>31</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25.740</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3756.62160</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>46</td>\n",
-       "      <td>0</td>\n",
-       "      <td>33.440</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8240.58960</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>37</td>\n",
-       "      <td>0</td>\n",
-       "      <td>27.740</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7281.50560</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>37</td>\n",
-       "      <td>1</td>\n",
-       "      <td>29.830</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>6406.41070</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>60</td>\n",
-       "      <td>0</td>\n",
-       "      <td>25.840</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>28923.13692</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -862,19 +789,92 @@
        "1   18    1  33.770         1       0       2   1725.55230               1\n",
        "2   28    1  33.000         3       0       2   4449.46200               0\n",
        "3   33    1  22.705         0       0       1  21984.47061               0\n",
-       "4   32    1  28.880         0       0       1   3866.85520               1\n",
-       "5   31    0  25.740         0       0       2   3756.62160               0\n",
-       "6   46    0  33.440         1       0       2   8240.58960               1\n",
-       "7   37    0  27.740         3       0       1   7281.50560               0\n",
-       "8   37    1  29.830         2       0       0   6406.41070               0\n",
-       "9   60    0  25.840         0       0       1  28923.13692               0"
+       "4   32    1  28.880         0       0       1   3866.85520               1"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "medical_copy.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.009575234489209\n",
+      "Variance of group with insurance:  197036140.771725 \n",
+      " variance of group without insurance:  41482614.4496537\n",
+      "The total variance ratio is:  4.749848662765996\n",
+      "Ttest_indResult(statistic=11.893299030876712, pvalue=4.461230231620717e-31)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import norm\n",
+    "#calculate pooled standard deviation\n",
+    "#create population\n",
+    "medical_copy = medical.copy()\n",
+    "charges_with_ins = medical_copy[medical_copy['insuranceclaim'] == True]\n",
+    "charges_without_ins = medical_copy[medical_copy['insuranceclaim'] == False]\n",
+    "\n",
+    "\n",
+    "#define critical value criteria\n",
+    "critical_value = round(norm.ppf(.975), 2)\n",
+    "sample_size = 50\n",
+    "degrees_of_freedom = sample_size - 1\n",
+    "\n",
+    "\n",
+    "# perform t-test\n",
+    "critical_t_value = t.ppf(0.975, degrees_of_freedom)\n",
+    "\n",
+    "print(critical_t_value)\n",
+    "\n",
+    "#decide if variance between the group with insurance and without insurance is \n",
+    "# similar\n",
+    "var_with_ins = np.var(charges_with_ins['charges'])\n",
+    "var_without_ins = np.var(charges_without_ins['charges'])\n",
+    "print(\"Variance of group with insurance: \", var_with_ins ,\"\\n\",\n",
+    "      \"variance of group without insurance: \", var_without_ins)\n",
+    "print(\"The total variance ratio is: \", np.abs(var_with_ins/var_without_ins))\n",
+    "#define t-statistics\n",
+    "t_score_corr = ttest_ind(charges_with_ins['charges'], charges_without_ins['charges'], equal_var=True)\n",
+    "\n",
+    "print(t_score_corr)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "charges with insurance:  783 \n",
+      " charges without insurance:  555\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"charges with insurance: \", len(charges_with_ins), \"\\n\",\n",
+    "      \"charges without insurance: \", len(charges_without_ins))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "medical.head(10)\n"
    ]
